styles/styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


body {
    font-size: 16px;
    font-family: Roboto, Arial, sans-serif;
}

header, footer, .grid{
    margin: 0 auto;
    max-width: 840px;
}

nav {
    background-color: steelblue;
    padding: 1rem;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

nav a {
    color: white;
    display: block;
    padding: 0.5rem;
    text-decoration: none;
    font-size: 1.2rem;
    font-weight: 700;
}

h1{
    color: steelblue;
    padding: .5rem;
    border-bottom: 1px solid steelblue;
}

main img{
    width: 150px;
    height: auto;
    border: 1px solid steelblue;
    padding: 2px;
    box-shadow: 0 0 30px gray;
    float: right;
    margin: 0 0 1rem 1rem;
}

p {
    margin: 1rem;
}

aside {
    width: 18rem;
    position: relative;
    text-align: center;
    grid-row: 1;
}

aside h2{
    position: absolute;
    top: 25px;
    left: 80px
}

aside img {
    width: 250px;
    height: auto;
}

footer{
    margin-top:15px ;
    border-top: 1px solid #000;
    text-align: center;
}

/* Class Selectors */

.box {
    margin: 1rem;
    border: 1px solid rgba(0, 0, 0, 0.2);
    padding: 1rem ;
    background-color: #ACC8E5;
    color: #112A46;
}

.indent {
    padding-left: 2rem;
    clear: right;
}

.grid {
    display: grid;
    grid-template-columns: auto 2fr;
    align-items: center;
}

